# job-seeking-agent

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
job_seeker/api/: main.py
job_seeker/chunking/: base.py  clean_html.py  worker.py
job_seeker/commands/: api.py
job_seeker/core/db/: dao.py  model.py  mongo.py  qdrant.py  rabbitmq.py
job_seeker/crawler/: __init__.py  base.py  dispatcher.py  github.py  indeed.py  markdown.py
job_seeker/db/: connection.py  dao.py  model.py  rabbitmq.py
job_seeker/embedding/: base.py  openai_embedding.py  sentence_transformer_embedding.py  sentence_transformer_embedding_server.py  server.py  worker.py
job_seeker/reranker/: sentence_transformer_reranker.py
job_seeker/scraper/: amazon.py  base.py  browser.py  dispatcher.py  microsoft.py  worker.py
job_seeker/utils/: async_utils.py
job_seeking_agent/crawler/: github.py  markdown.py
testing/: embedding_similarity.py  embedding_test.py
tests/: crawl_job_csv.py  embedding_local_test.py  embedding_openai_test.py  vector_db_test.py
