[project]
name = "job_seeker"
version = "0.0.1"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp==3.11.13",
    "aio_pika==9.5.5",
    "dotenv==0.9.9",
    "loguru==0.7.3",
    "motor==3.7.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "python-dateutil==2.9.0.post0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "frontend"]
